class Contractor:
    def __init__(self) -> None:
        pass