class Destination:
    def __init__(self) -> None:
        pass