class Employee:
    def __init__(self) -> None:
        pass