class Listing:
    def __init__(self) -> None:
        pass