class RealEstate:
    def __init__(self) -> None:
        pass