class Search:
    def __init__(self) -> None:
        pass