class Work_orders:
    def __init__(self) -> None:
        pass