@startuml airline
package Airline {
    class Manager {
        file_new_employee()
        change_employee()
        file_new_real_estate()
        change_real_estate()
        make_new_work_order()
        change_work_order()
        approve_work_report()
        approve_maintenance_report()
        file_contractor()
        change_contractor()
        file_contractor_log()
    }
    class Employee {
        name: string
        ssn: int
        address: string
        home_phone: int
        mobile_phone: int
        email: string
        location: string
        --
        login()
        logout()
        file_work_report()
        file_maintenance_report()
        complete_work_order()
        list_employees()
        search_employee()
        list_real_estate()
        search_real_estate()
        search_work_order()
        search_work_report()
        search_contractor()
        list_contractor()
        Search_contractor_log()
        list_contractor_log()
    }
    class Destination {
        location: string
        airport: string
        phone: int
        opening_hours: string
        manager: string
    }
    class Real_estate {
        location: string
        address: string
        id: int
        maintenance_info: string
    }
    class Work_order {
        id: int
        real_estate_id: list
        work_description: string
        employees: list
        start_date: string
        importance: string
        status: string
        is_recurring: bool
    }
    class Maintenance_report {
        id: string
        real_estate_id: list
        work_description: string
        employees: list
        total_price: float
        contractor_id: list
        contractor_pay: float
        evaluation_of_contractor: string
        start_date: string
        time_period: string
        status: string
        was_recurring: bool
    }
    class Contractor {
        id: int
        name: string
        contact: string
        phone: int
        opening_hours: string
        location: string
    }
    class Search {
        search_string: string
        --
        search()
    }
    class Listing {
        filter: string
        --
        get_data()
    }
    class Recurring_work_order {
        recurring_work_orders: list
        --
        renew_work_order()
    }

Manager --|> Employee
Destination "1" <-- "*" Real_estate
Destination "1" <-- "1" Manager
Destination "1" <-- "*" Employee
Destination "1" <-- "*" Contractor
Work_order "1" -- "0..1" Maintenance_report
Work_order "*" -- "*" Employee
Work_order <|-- Recurring_work_order
Listing <|-- Search
Search <.. Employee
Listing <.. Employee
}
@enduml